--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -97,7 +97,7 @@
      <Compile Include="Assets\PostProcessing\Runtime\Utils\RenderTextureFactory.cs" />
      <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
      <Compile Include="Assets\Scripts\LighningChain.cs" />
-     <Compile Include="Assets\Scripts\LightningTrail.cs" />
+     <Compile Include="Assets\Scripts\NONLightningTrail.cs" />
      <None Include="Assets\PostProcessing\Resources\Shaders\DepthOfField.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\MotionBlur.cginc" />
      <None Include="Assets\PostProcessing\Resources\Shaders\Fog.shader" />
